2014-12-18  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Lokesh Mandvekar: 33999: Completion/Linux/Command/_docker:
	remove completion as the version supplied with docker is
	authoritative.

2014-12-18  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 33978: Src/Zle/complist.c: update command line when accept-
	and-hold is called in interactive mode of menu select

2014-12-17  Peter Stephenson  <p.stephenson@samsung.com>

	* users/19551: Doc/builtins.yo, Doc/Zsh/roadmap.yo: better
	documentation that history file reading and writing is only
	done in interactive shells.

2014-12-16  Barton E. Schaefer  <schaefer@zsh.org>

	* Jun Kuriyama: 33984: Src/builtin.c: bin_dirs() should use
	zputs() to print metafied directory names

	* Chirantan Ekbote: 33982: Src/jobs.c: minimal support for pid
	namespaces by recognizing that GETPGRP() may return 0

2014-12-15  Barton E. Schaefer  <schaefer@zsh.org>

	* 33976: Src/subst.c: fix overlapping strcpy()

2014-12-14  Mikael Magnusson  <mikachu@gmail.com>

	* users/19530: Completion/Unix/Type/_file_systems: Handle
	commented lines in /etc/filesystems

2014-12-13  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: Test/D04parameter.ztst: need -f for starting zsh
	to avoid problems from user config files.

2014-12-13  Oliver Kiddle  <opk@zsh.org>

	* 33958: Completion/Unix/Command/_sudo: update for newer options

	* 33956: Doc/Zsh/zle.yo, Src/Zle/zle_bindings.c,
	Src/Zle/zle_keymap.c: document key binding changes and remove
	^X binding

	* 33846: Src/Zle/iwidgets.list, Src/Zle/zle_bindings.c,
	Src/Zle/zle_keymap.c: additional default vi-mode key bindings

2014-12-12  Oliver Kiddle  <opk@zsh.org>

	* 33950: Doc/Zsh/zle.yo, Src/Zle/iwidgets.list, Src/Zle/zle.h,
	Src/Zle/zle_keymap.c: ignore KEYTIMEOUT for vi operators

2014-12-11  Peter Stephenson  <p.stephenson@samsung.com>

	* 33876: etc.:  Completion/Base/Core/_main_complete,
	Doc/Zsh/params.yo, Src/Modules/zpty.c,  Src/Modules/zutil.c,